# mpcursive

./: Cargo.toml
src/: lib.rs  main.rs  mpd_util.rs
src/view/: mod.rs  playing.rs  playlist.rs  root.rs  titlebar.rs
themes/: dark.toml
